src/rfx/tests/preprocessor/PreprocDetail_2.approved.out
SourceOutput:[
    #line 1 "D:/Work/my/OpenDemo/src/rfx/tests/preprocessor/PreprocDetail_2.rfx"
    
    
    
    
    
    
    A(,)
]
Diagnostic:[
    D:/Work/my/OpenDemo/src/rfx/tests/preprocessor/PreprocDetail_2.rfx:5:14: error: duplicate macro parameter name 'x'
    #define A(x, x) a x b x c
                 ^
]
