src/rfx/tests/preprocessor/PreprocDetail_2.rfx
//PREPROCESSOR_TEST:

// Macro parameters must have unique names

#define A(x, x) a x b x c

A(,)